force-app/main/default/objects/LMS_Acknowledgment__c/LMS_Acknowledgment__c.object-meta.xml
<CustomObject>
    <label>LMS Acknowledgment</label>
    <nameField>
        <label>LMS Acknowledgment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Acknowledgments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>