force-app/main/default/objects/LMS_Acknowledgment__c/fields/LMS_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>LMS_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledged</label>
    <type>Checkbox</type>
</CustomField>