force-app/main/default/objects/LMS_Acknowledgment__c/fields/LMS_Training__c.field-meta.xml
<CustomField>
    <fullName>LMS_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>LMS_Training__c</referenceTo>
    <relationshipLabel>Acknowledgments</relationshipLabel>
    <relationshipName>Acknowledgments</relationshipName>
    <type>Lookup</type>
</CustomField>